[package]
name = "server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
clap = { version = "4", features = ["derive"] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
rcgen = "0.13"
once_cell = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tower-http = { version = "0.3", features = ["fs"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }
tokio-tungstenite = "0.21"
tempfile = "3"
serial_test = "2"
