[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1"
